Added html for paragraphs and page links

--- a/rotatingNavigation/rotatingNav.html
+++ b/rotatingNavigation/rotatingNav.html
@@ -23,9 +23,23 @@
             <h1>This Is A Great Article!</h1>
             <small>Awesome Author</small>
             Here is a bunch of stuff for the project!
-            
+            Lorem ipsum dolor, sit amet consectetur
+            adipisicing elit. Reiciendis rem excepturi modi minima mollitia 
+            similique necessitatibus? Animi itaque assumenda rem nostrum nam laboriosam hic dolores 
+            deserunt libero? Porro, ullam ex!
+            <h3>My Rabbit</h3>
+            <img class="bun" src="bunny.jpg">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe animi nisi soluta dolores. Laudantium natus vero doloremque culpa consequatur pariatur dignissimos? Sed sunt laudantium velit expedita ab id quos quibusdam exercitationem saepe sint aut repellat dicta nam illum ratione mollitia, sequi maiores distinctio accusamus. Ex voluptate culpa aperiam fugiat, ipsa porro quidem incidunt saepe! Temporibus, nobis. Officia, labore! Architecto cum iusto debitis provident laudantium, corrupti tempora? Eligendi qui dolorem totam!</p>
         </div>
     </div>
+
+    <nav>
+        <ul>
+            <li><i class="fas fa-home"></i>Home</li>
+            <li><i class="fas fa-user-alt"></i>About</li>
+            <li><i class="fas fa-envelope"></i>Contact</li>
+        </ul>
+    </nav>
     <script src="rotatingNav.js"></script>
 </body>
 </html>
