--- a/scrollAnimation/scrollAnimation.html
+++ b/scrollAnimation/scrollAnimation.html
@@ -9,21 +9,19 @@
 </head>
 <body>
     <h1>Scroll to see the animation</h1>
-    <div class="box"><h2>Infamation</h2></div>
-    <div class="box"><h2>Infamation</h2></div>
-    <div class="box"><h2>Infamation</h2></div>
-    <div class="box"><h2>Infamation</h2></div>
-    <div class="box"><h2>Infamation</h2></div>
-    <div class="box"><h2>Infamation</h2></div>
-    <div class="box"><h2>Infamation</h2></div>
-    <div class="box"><h2>Infamation</h2></div>
-    <div class="box"><h2>Infamation</h2></div>
-    <div class="box"><h2>Infamation</h2></div>
-    <div class="box"><h2>Infamation</h2></div>
-    <div class="box"><h2>Infamation</h2></div>
-    <div class="box"><h2>Infamation</h2></div>
-    <div class="box"><h2>Infamation</h2></div>
-    <div class="box"><h2>Infamation</h2></div>
+    <div class="box"><h2>Chompsky <i class="fas fa-carrot"></i></h2></div>
+    <div class="box"><h2>Babette <i class="fas fa-carrot"></i></h2></div>
+    <div class="box"><h2>Chompsky <i class="fas fa-carrot"></i></h2></div>
+    <div class="box"><h2>Babette <i class="fas fa-carrot"></i></h2></div>
+    <div class="box"><h2>Chompsky <i class="fas fa-carrot"></i></h2></div>
+    <div class="box"><h2>Babette <i class="fas fa-carrot"></i></h2></div>
+    <div class="box"><h2>Chompsky <i class="fas fa-carrot"></i></h2></div>
+    <div class="box"><h2>Babette <i class="fas fa-carrot"></i></h2></div>
+    <div class="box"><h2>Chompsky <i class="fas fa-carrot"></i></h2></div>
+    <div class="box"><h2>Babette <i class="fas fa-carrot"></i></h2></div>
+    <div class="box"><h2>Chompsky <i class="fas fa-carrot"></i></h2></div>
+    <div class="box"><h2>Babette <i class="fas fa-carrot"></i></h2></div>
+    <div class="box"><h2>Chompsky <i class="fas fa-carrot"></i></h2></div>
     <script src="scrollAnimation.js"></script>
 </body>
 </html>
