--- a/splitLandingPage/splitLandingPage.html
+++ b/splitLandingPage/splitLandingPage.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="splitLandingPage.css">
 </head>
 <body>
+    <div class="dontainer">
+        <div class="split left"></div>
+    </div>
     <script src="splitLandingPage.js"></script>
 </body>
 </html>
