Added html page layout

--- a/splitLandingPage/splitLandingPage.html
+++ b/splitLandingPage/splitLandingPage.html
@@ -8,8 +8,15 @@
     <link rel="stylesheet" href="splitLandingPage.css">
 </head>
 <body>
-    <div class="dontainer">
+    <div class="container">
         <div class="split left"></div>
+        <h1>I Have a Bun</h1>
+        <a href="#" class="btn">Take Me To Bunny Parent Resources</a>
+    </div>
+    <div class="container">
+        <div class="split right"></div>
+        <h1>I Want a Bun</h1>
+        <a href="#" class="btn">Take Me To Bunny Prep Resources</a>
     </div>
     <script src="splitLandingPage.js"></script>
 </body>
