--- a/splitLandingPage/splitLandingPage.html
+++ b/splitLandingPage/splitLandingPage.html
@@ -8,16 +8,17 @@
     <link rel="stylesheet" href="splitLandingPage.css">
 </head>
 <body>
-    <div class="container">
-        <div class="split left"></div>
+    <section class="container">
+        <div class="split left">
         <h1>I Have a Bun</h1>
         <a href="#" class="btn">Take Me To Bunny Parent Resources</a>
     </div>
-    <div class="container">
-        <div class="split right"></div>
+    < class="container">
+        <div class="split right">
         <h1>I Want a Bun</h1>
         <a href="#" class="btn">Take Me To Bunny Prep Resources</a>
     </div>
+</section>
     <script src="splitLandingPage.js"></script>
 </body>
 </html>
