--- a/splitLandingPage/splitLandingPage.html
+++ b/splitLandingPage/splitLandingPage.html
@@ -11,12 +11,12 @@
     <section class="container">
         <div class="split left">
         <h1>I Have a Bun</h1>
-        <a href="#" class="btn">Take Me To Bunny Parent Resources</a>
+        <a href="#" class="btn">Get Started</a>
     </div>
     < class="container">
         <div class="split right">
         <h1>I Want a Bun</h1>
-        <a href="#" class="btn">Take Me To Bunny Prep Resources</a>
+        <a href="#" class="btn">Get Started</a>
     </div>
 </section>
     <script src="splitLandingPage.js"></script>
