Added css styling for expanding left and right sides of screen on cover. Need js for functionality

--- a/splitLandingPage/splitLandingPage.html
+++ b/splitLandingPage/splitLandingPage.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="splitLandingPage.css">
 </head>
 <body>
-    <section class="container">
+    <section class="container hover-left">
         <div class="split left">
         <h1>I Have a Bun</h1>
         <a href="#" class="btn">Get Started</a>
