Added styling to form control input

--- a/formWaveAnimation/formWave.html
+++ b/formWaveAnimation/formWave.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <section class="container">
-    <h1>Please Login</h1>
+    <h1>Please Log In</h1>
     <form>
         <div class="form-control">
             <input type="text" required>
