--- a/formWaveAnimation/formWave.html
+++ b/formWaveAnimation/formWave.html
@@ -12,7 +12,7 @@
     <h1>Please Log In</h1>
     <form>
         <div class="form-control">
-            <input type="text" required>
+            <input class="text" type="text" required>
             <label>Email</label>
         </div>
 
