--- a/soundBoard/soundBoard.html
+++ b/soundBoard/soundBoard.html
@@ -3,13 +3,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Project</title>
+    <title>Sound Board</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Project Starter</h1>
-    <h2>Hey</h2>
-    <h3>Hi</h3>
+    <audio id = "applause" src="sounds/sound-board_sounds_applause.mp3"></audio>
+    <audio id = "boo" src="sounds/sound-board_sounds_boo.mp3"></audio>
+    <audio id = "gasp" src="sounds/sound-board_sounds_gasp.mp3"></audio>
+    <audio id = "tada" src="sounds/sound-board_sounds_tada.mp3"></audio>
+    <audio id = "victory" src="sounds/sound-board_sounds_victory.mp3"></audio>
+    <audio id = "wrong" src="sounds/sound-board_sounds_wrong.mp3"></audio>
     <script src="script.js"></script>
 </body>
 </html>
