--- a/soundBoard/soundBoard.html
+++ b/soundBoard/soundBoard.html
@@ -13,6 +13,8 @@
     <audio id = "tada" src="sounds/sound-board_sounds_tada.mp3"></audio>
     <audio id = "victory" src="sounds/sound-board_sounds_victory.mp3"></audio>
     <audio id = "wrong" src="sounds/sound-board_sounds_wrong.mp3"></audio>
+
+    <div id="buttons"></div>
     <script src="script.js"></script>
 </body>
 </html>
