Created html content for joke generator

--- a/dadJokes/dadJokes.html
+++ b/dadJokes/dadJokes.html
@@ -8,7 +8,15 @@
      <link rel="stylesheet" href="dadJokes.css">
 </head>
 <body>
-    <h1>Project Starter</h1>
+    <div class="container">
+        <h3>Don't Laugh Challenge</h3>
+        <div class="joke">
+            <!-- Joke goes here -->
+        </div>
+        <Button id="jokeBtn" class="btn">
+            Get Another Joke
+        </Button>
+    </div>
     <script src="dadJokes.js"></script>
 </body>
 </html>
