added button styling

--- a/dadJokes/dadJokes.html
+++ b/dadJokes/dadJokes.html
@@ -12,6 +12,7 @@
         <h3>Don't Laugh Challenge</h3>
         <div class="joke">
             <!-- Joke goes here -->
+            //Joke Goes Here
         </div>
         <Button id="jokeBtn" class="btn">
             Get Another Joke
