--- a/eventKeycodes/eventKey.html
+++ b/eventKeycodes/eventKey.html
@@ -3,13 +3,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Project</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />    <link rel="stylesheet" href="style.css">
+    <title>Event Key Codes</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />   
+     <link rel="stylesheet" href="eventKey.css">
 </head>
 <body>
-    <h1>Project Starter</h1>
-    <h2>Hey</h2>
-    <h3>Hi</h3>
-    <script src="script.js"></script>
+   <div id="insert">
+       <div class="key">
+           a
+           <small>event.key</small>
+       </div>
+
+       <div class="key">
+        65 
+        <small>event.keycode</small>
+       </div>
+
+       <div class="key">
+           KeyA 
+           <small>event.code</small>
+           <div class="key">
+               Press Any Key To Get the Keycode
+           </div>
+       </div>
+   </div>
+    <script src="eventKey.js"></script>
 </body>
 </html>
