Adding event listner

--- a/eventKeycodes/eventKey.html
+++ b/eventKeycodes/eventKey.html
@@ -22,6 +22,7 @@
        <div class="key">
            KeyA 
            <small>event.code</small>
+           </div>
            <div class="key">
                Press Any Key To Get the Keycode
            </div>
