Setting up html layout

--- a/faqCollapse/faq.html
+++ b/faqCollapse/faq.html
@@ -8,9 +8,24 @@
     <link rel="stylesheet" href="faq.css">
 </head>
 <body>
-    <h1>Project Starter</h1>
-    <h2>Hey</h2>
-    <h3>Hi</h3>
+    <h1>Frequently Asked Questions</h1>
+    <div class="faq-container">
+        <div class="faq active">
+            <h3 class= "faq-title">
+                Why Shouldn't we trust atoms?
+            </h3>
+            <p class="faq-text">
+                They make up everything
+            </p>
+
+            <button>
+             <i class="fas fa-chevron-down"></i>
+             <i class="fas fa-times"></i>
+
+            </button>
+        </div>
+    </div>
+    
     <script src="faq.js"></script>
 </body>
 </html>
