--- a/randomChoice/randomChoice.html
+++ b/randomChoice/randomChoice.html
@@ -3,12 +3,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Project</title>
+    <title>Random Choice Picker</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />   
      <link rel="stylesheet" href="randomChoice.css">
 </head>
 <body>
-    <h1>Project Starter</h1>
+    <div class="container">
+        <h3>Enter all of the choices divided by a comma (','). 
+            <br>Press enter when you're done
+        </h3>
+        <textarea placeholder="Enter choices here..." id="textarea"></textarea>
+        <div id="tags">
+            <span class="tag">Choice 1</span>
+            <span class="tag">Choice 2</span>
+            <span class="tag">Choice 3</span>
+        </div>
+    </div>
     <script src="randomChoice.js"></script>
 </body>
 </html>
