--- a/incrementingCounter/incrementingCounter.html
+++ b/incrementingCounter/incrementingCounter.html
@@ -3,14 +3,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Project</title>
+    <title>Incrementing Counter</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" /> 
     <link rel="stylesheet" href="incrementingCounter.css">
 </head>
 <body>
-    <h1>Project Starter</h1>
-    <h2>Hey</h2>
-    <h3>Hi</h3>
+    <div class="counter-container">
+        <i class="fab fa-twitter fa-3x"></i>
+        <div class="counter" data-target="12000">12000</div>
+        <span>Twitter Followers</span>
+    </div>
     <script src="incrementingCounter.js"></script>
 </body>
 </html>
