--- a/incrementingCounter/incrementingCounter.html
+++ b/incrementingCounter/incrementingCounter.html
@@ -8,11 +8,26 @@
     <link rel="stylesheet" href="incrementingCounter.css">
 </head>
 <body>
+    
+    
+    <div class="counter-container">
+        <i class="fab fa-youtube fa-3x"></i>
+        <div class="counter" data-target="12000">12000</div>
+        <span>Youtube Subscribers</span>
+    </div>
+
+    <div class="counter-container">
+        <i class="fab fa-facebook fa-3x"></i>
+        <div class="counter" data-target="7500">75000</div>
+        <span>Facebook Fans</span>
+    </div>
+
     <div class="counter-container">
         <i class="fab fa-twitter fa-3x"></i>
         <div class="counter" data-target="12000">12000</div>
         <span>Twitter Followers</span>
     </div>
+
     <script src="incrementingCounter.js"></script>
 </body>
 </html>
