Added updateCounter function

--- a/incrementingCounter/incrementingCounter.html
+++ b/incrementingCounter/incrementingCounter.html
@@ -24,7 +24,10 @@
 
     <div class="counter-container">
         <i class="fab fa-twitter fa-3x"></i>
-        <div class="counter" data-target="12000"></div>
+        <div class="counter" data-target="12000">
+
+            
+        </div>
         <span>Twitter Followers</span>
     </div>
 
