--- a/drinkWater/drinkWater.html
+++ b/drinkWater/drinkWater.html
@@ -3,13 +3,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Project</title>
+    <title>Hydrate!</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />    
     <link rel="stylesheet" href="drinkWater.css">
 </head>
 <body>
-    <h1>Project Starter</h1>
+    <h1>Hydrate!</h1>
+    <h3>Goal: 2 Liters</h3>
 
+    <div class="cup">
+        <div class="remaining" id="remaining">
+            <span id="liters">1.5L</span>
+            <small>Remaining</small>
+        </div>
+        <div class="percentage" id="percentage">
+            20%
+        </div>
+    </div>
+    <p class="text">Select How Many Glasses of Water You Have Finished</p>
+    <div class="cups">
+        <div class="cup cup-small">250ml</div>
+        <div class="cup cup-small">250ml</div>
+        <div class="cup cup-small">250ml</div>
+        <div class="cup cup-small full">250ml</div>
+        <div class="cup cup-small full">250ml</div>
+        <div class="cup cup-small">250ml</div>
+        <div class="cup cup-small">250ml</div>
+        <div class="cup cup-small">250ml</div>
+    </div>
     <script src="drinkWater.js"></script>
 </body>
 </html>
