Defined variables from the DOM and added forEach loop for cups

--- a/drinkWater/drinkWater.html
+++ b/drinkWater/drinkWater.html
@@ -13,17 +13,16 @@
 
     <div class="cup">
         <div class="remaining" id="remaining">
-            <span id="liters">1.5L</span>
+            <span id="liters"></span>
             <small>Remaining</small>
         </div>
         <div class="percentage" id="percentage">
-            20%
         </div>
     </div>
     <p class="text">Select How Many Glasses of Water You Have Finished</p>
     <div class="cups">
-        <div class="cup cup-small full">250ml</div>
-        <div class="cup cup-small full">250ml</div>
+        <div class="cup cup-small">250ml</div>
+        <div class="cup cup-small">250ml</div>
         <div class="cup cup-small">250ml</div>
         <div class="cup cup-small">250ml</div>
         <div class="cup cup-small">250ml</div>
