Started buildin out html project structure & added photo

--- a/movieApp/movieApp.html
+++ b/movieApp/movieApp.html
@@ -3,13 +3,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Project</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />    <link rel="stylesheet" href="style.css">
+    <title>Movie App</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />    
+    <link rel="stylesheet" href="movieApp.css">
 </head>
-<body>
-    <h1>Project Starter</h1>
-    <h2>Hey</h2>
-    <h3>Hi</h3>
-    <script src="script.js"></script>
+<header>
+    <form id="form">
+    <input type="text" id="search" class="search" placeholder="search">
+</form>
+
+<main id="main">
+    <div class="movie">
+        <img src="seats.jpg" alt="A photo of seats in a movie theater">
+    <div class="movie-info">
+        <h3>Movie Title</h3>
+    </div>
+    </div>
+
+
+</main>
+</header>
+    <script src="movieApp.js"></script>
 </body>
 </html>
