--- a/movieApp/movieApp.html
+++ b/movieApp/movieApp.html
@@ -11,18 +11,54 @@
     <form id="form">
     <input type="text" id="search" class="search" placeholder="search">
 </form>
+</header>
 
 <main id="main">
     <div class="movie">
         <img src="seats.jpg" alt="A photo of seats in a movie theater">
     <div class="movie-info">
         <h3>Movie Title</h3>
+        <span id="green">9.8</span>
+    </div>
+    <div class="overview">
+        <h3>Overview</h3>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+         Nostrum voluptas nisi repellendus corrupti 
+        beatae quam quasi optio laboriosam illo accusantium.
+    </div>
+    </div>
+
+    <div class="movie">
+        <img src="seats.jpg" alt="A photo of seats in a movie theater">
+    <div class="movie-info">
+        <h3>Movie Title</h3>
+        <span id="green">9.8</span>
+    </div>
+    <div class="overview">
+        <h3>Overview</h3>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+         Nostrum voluptas nisi repellendus corrupti 
+        beatae quam quasi optio laboriosam illo accusantium.
+    </div>
+    </div>
+
+    <div class="movie">
+        <img src="seats.jpg" alt="A photo of seats in a movie theater">
+    <div class="movie-info">
+        <h3>Movie Title</h3>
+        <span id="green">9.8</span>
+    </div>
+    <div class="overview">
+        <h3>Overview</h3>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+         Nostrum voluptas nisi repellendus corrupti 
+        beatae quam quasi optio laboriosam illo accusantium.
     </div>
     </div>
 
 
 </main>
-</header>
+
     <script src="movieApp.js"></script>
 </body>
 </html>
