Building out slider html

--- a/backgroundSlider/backgroundSlider.html
+++ b/backgroundSlider/backgroundSlider.html
@@ -8,7 +8,18 @@
     <link rel="stylesheet" href="backgroundSlider.css">
 </head>
 <body>
-    <h1>Project Starter</h1>
+    <div class="slider-container">
+        <div class="slide active" style= "background-image: url('https://unsplash.com/photos/OSF3YuVeCFY');"></div>
+
+    <div class="slide" style= "background-image: url('https://unsplash.com/photos/hmXtDtmM5r0');"></div>
+
+    <div class="slide" style= "background-image: url('https://unsplash.com/photos/qFuKzUleXsw');"></div>
+
+    <div class="slide" style= "background-image: url('https://unsplash.com/photos/XaQXyRU9pgo');"></div>
+
+
+    </div>
+
     <script src="backgroundSlider.js"></script>
 </body>
 </html>
