Finished html layout for project

--- a/backgroundSlider/backgroundSlider.html
+++ b/backgroundSlider/backgroundSlider.html
@@ -17,6 +17,14 @@
 
     <div class="slide" style= "background-image: url('https://unsplash.com/photos/XaQXyRU9pgo');"></div>
 
+    <button class="arrow left-arrow" id="left">
+        <i class="fas fa-arrow-left"></i>
+    </button>
+
+    <button class="arrow right-arrow" id="left">
+        <i class="fas fa-arrow-right"></i>
+    </button>
+
 
     </div>
 
