Added body styling

--- a/backgroundSlider/backgroundSlider.html
+++ b/backgroundSlider/backgroundSlider.html
@@ -11,11 +11,12 @@
     <div class="slider-container">
         <div class="slide active" style= "background-image: url('https://unsplash.com/photos/OSF3YuVeCFY');"></div>
 
-    <div class="slide" style= "background-image: url('https://unsplash.com/photos/hmXtDtmM5r0');"></div>
+    <div class="slide" style= "background-image: url('https://images.unsplash.com/photo-1508957999498-e7a5e89ba28a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2767&q=80');">
+    </div>
 
-    <div class="slide" style= "background-image: url('https://unsplash.com/photos/qFuKzUleXsw');"></div>
+    <div class="slide" style= "background-image: url('https://images.unsplash.com/photo-1555988776-c3f17e5cb789?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2767&q=80');"></div>
 
-    <div class="slide" style= "background-image: url('https://unsplash.com/photos/XaQXyRU9pgo');"></div>
+    <div class="slide" style= "background-image: url('https://images.unsplash.com/photo-1543385426-191664295b58?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2916&q=80');"></div>
 
     <button class="arrow left-arrow" id="left">
         <i class="fas fa-arrow-left"></i>
