--- a/backgroundSlider/backgroundSlider.html
+++ b/backgroundSlider/backgroundSlider.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="slider-container">
-        <div class="slide active" style= "background-image: url('https://unsplash.com/photos/OSF3YuVeCFY');"></div>
+        <div class="slide active" style= "background-image: url('https://images.unsplash.com/photo-1571496961157-ea1c8cc19082?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2850&q=80');"></div>
 
     <div class="slide" style= "background-image: url('https://images.unsplash.com/photo-1508957999498-e7a5e89ba28a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2767&q=80');">
     </div>
