--- a/backgroundSlider/backgroundSlider.html
+++ b/backgroundSlider/backgroundSlider.html
@@ -22,7 +22,7 @@
         <i class="fas fa-arrow-left"></i>
     </button>
 
-    <button class="arrow right-arrow" id="left">
+    <button class="arrow right-arrow" id="right">
         <i class="fas fa-arrow-right"></i>
     </button>
 
