Wrote html layout for project

--- a/buttonRipple/buttonRipple.html
+++ b/buttonRipple/buttonRipple.html
@@ -8,9 +8,7 @@
     <link rel="stylesheet" href="buttonRipple.css">
 </head>
 <body>
-    <h1>Project Starter</h1>
-    <h2>Hey</h2>
-    <h3>Hi</h3>
+    <button>Click Me! <span class ="cirlce" style="top: 27px; left: 82px"></span></button>
     <script src="buttonRipple.js"></script>
 </body>
 </html>
