Added forEach loop with onclick event listener for buttons

--- a/buttonRipple/buttonRipple.html
+++ b/buttonRipple/buttonRipple.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="buttonRipple.css">
 </head>
 <body>
-    <button>Click Me! <span class ="circle" style="top: 27px; left: 82px"></span></button>
+    <button class="ripple">Click Me!</button>
     <script src="buttonRipple.js"></script>
 </body>
 </html>
