Added box styling and media query

--- a/dragAndDrop/dragAndDrop.html
+++ b/dragAndDrop/dragAndDrop.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="dragAndDrop.css">
 </head>
 <body>
+    <h1>Drag & Drop the image!</h1>
+<section class="box-container">
     <div class="empty">
         <div class="fill" draggable=true></div>
     </div>
@@ -15,6 +17,7 @@
     <div class="empty"></div>
     <div class="empty"></div>
     <div class="empty"></div>
+</section>
     <script src="dragAndDrop.js"></script>
 </body>
 </html>
