--- a/drawingApp/drawingApp.html
+++ b/drawingApp/drawingApp.html
@@ -9,6 +9,15 @@
     <link rel="stylesheet" href="drawingApp.css">
 </head>
 <body>
-    <script src="drawingApp.js"></script>
+  <canvas id="canvas" width="800" height="700"></canvas>
+  <div class="toolbox">
+    <button id="decrease">-</button>
+    <span id="size">10</span>
+    <button id="increase">+</button>
+    <input type="color" id="color">
+    <button id="clear">X</button>
+  </div>
+
+  <script src="drawingApp.js"></script>
 </body>
 </html>
