Added keyframes styling to create animation on one triangle

--- a/kineticCSS/kineticCSS.html
+++ b/kineticCSS/kineticCSS.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Created With CSS!</h1>
-    <div id="kinetic"></div>
+    <div class="kinetic"></div>
     <script src="kineticCSS.js"></script>
 </body>
 </html>
