--- a/contentPlaceholder/contentPlaceholder.html
+++ b/contentPlaceholder/contentPlaceholder.html
@@ -8,7 +8,15 @@
     <link rel="stylesheet" href="contentPlaceholder.css">
 </head>
 <body>
-    <h1>Project Starter</h1>
+    <div class="card">
+        <div class="card-header animated-bg" id="header"></div>
+        <img src="https://images.unsplash.com/photo-1574802366240-696d5309e51b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1006&q=80" alt="image of jellyfish">
+    </div>
+    <div class="card-content">
+        <h3 class="card-title animated-bg animated-bg-text" 
+        id="title">Lorem ipsum dolor sit amet consectetur.</h3>
+        <p class="card-excerpt" id="excerpt"></p>
+    </div>
     <script src="contentPlaceholder.js"></script>
 </body>
 </html>
