Finished HTML project structure

--- a/contentPlaceholder/contentPlaceholder.html
+++ b/contentPlaceholder/contentPlaceholder.html
@@ -24,7 +24,20 @@
             <span class="animated-bg animated-bg-text">&nbsp;
             </span>
         </p>
-        <div class="author"></div>
+        <div class="author">
+            <div class="profile-img animated-bg" id="profile_img">
+                <img src="https://randomuser.me/api/portraits.jpg" alt="">
+
+            </div>
+            <div class="author-info">
+                <strong class="animated-bg animated-bg-text" id="name">
+                    K. Doe
+                </strong>
+                <small class="animated-bg animated-bg-text" id="date">
+                    June 21 2021
+                </small>
+            </div>
+        </div>
     </div>
 </div>
     <script src="contentPlaceholder.js"></script>
