--- a/contentPlaceholder/contentPlaceholder.html
+++ b/contentPlaceholder/contentPlaceholder.html
@@ -26,7 +26,7 @@
         </p>
         <div class="author">
             <div class="profile-img animated-bg" id="profile_img">
-                <img src="https://randomuser.me/api/portraits.jpg" alt="">
+                <img src="https://randomuser.me/api/portraits/med/women/75.jpg" alt="">
 
             </div>
             <div class="author-info">
