--- a/contentPlaceholder/contentPlaceholder.html
+++ b/contentPlaceholder/contentPlaceholder.html
@@ -6,13 +6,16 @@
     <title>Content Placeholder</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />    
     <link rel="stylesheet" href="contentPlaceholder.css">
+    <title>Content Placeholder</title>
 </head>
 <body>
-    <div class="card">
-        <div class="card-header animated-bg" id="header"></div>
-        <img src="https://images.unsplash.com/photo-1574802366240-696d5309e51b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1006&q=80" alt="image of jellyfish">
 
-    <div class="card-content">
+    <div class="card">
+        <div class="card-header animated-bg" id="header">
+        <img src="https://images.unsplash.com/photo-1574802366240-696d5309e51b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1006&q=80" alt="image of jellyfish">
+    </div>
+    
+        <div class="card-content">
         <h3 class="card-title animated-bg animated-bg-text" 
         id="title">Lorem ipsum dolor sit amet consectetur.</h3> 
         <p class="card-excerpt" id="excerpt">
