--- a/contentPlaceholder/contentPlaceholder.html
+++ b/contentPlaceholder/contentPlaceholder.html
@@ -12,14 +12,15 @@
 
     <div class="card">
         <div class="card-header animated-bg" id="header">
-        <img src="https://images.unsplash.com/photo-1574802366240-696d5309e51b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1006&q=80" alt="image of jellyfish">
+        &nbsp;
     </div>
     
         <div class="card-content">
         <h3 class="card-title animated-bg animated-bg-text" 
-        id="title">Lorem ipsum dolor sit amet consectetur.</h3> 
+        id="title">&nbsp;
+    </h3> 
         <p class="card-excerpt" id="excerpt">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Provident, minima.
+            &nbsp;
             <span class="animated-bg animated-bg-text">&nbsp;
             </span>
             <span class="animated-bg animated-bg-text">&nbsp;
