Added getData function and called within setTimeout method

--- a/contentPlaceholder/contentPlaceholder.html
+++ b/contentPlaceholder/contentPlaceholder.html
@@ -30,15 +30,15 @@
         </p>
         <div class="author">
             <div class="profile-img animated-bg" id="profile_img">
-                <img src="https://randomuser.me/api/portraits/med/women/75.jpg" alt="">
+               &nbsp;
 
             </div>
             <div class="author-info">
                 <strong class="animated-bg animated-bg-text" id="name">
-                    K. Doe
+                    &nbsp;
                 </strong>
                 <small class="animated-bg animated-bg-text" id="date">
-                    June 21 2021
+                    &nbsp;
                 </small>
             </div>
         </div>
