--- a/stickyNav/stickyNav.html
+++ b/stickyNav/stickyNav.html
@@ -8,9 +8,26 @@
     <link rel="stylesheet" href="stickyNav.css">
 </head>
 <body>
-    <h1>Project Starter</h1>
-    <h2>Hey</h2>
-    <h3>Hi</h3>
+    <nav class="nav">
+        <div class="container">
+            <h1 class="logo"><a href="/index.html">
+            My Website</a></h1>
+            <ul>
+                <li>
+                    <a href="Home" class="active"></a>
+                </li>
+                <li>
+                    <a href="About"></a>
+                </li>
+                <li>
+                    <a href="Services"></a>
+                </li>
+                <li>
+                    <a href="Contact"></a>
+                </li>
+            </ul>
+        </div>
+    </nav>
     <script src="stickyNav.js"></script>
 </body>
 </html>
