--- a/stickyNav/stickyNav.html
+++ b/stickyNav/stickyNav.html
@@ -1,33 +1,47 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sticky Navbar</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />    
-    <link rel="stylesheet" href="stickyNav.css">
-</head>
-<body>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+      integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="stickyNav.css" />
+  </head>
+  <body>
     <nav class="nav">
-        <div class="container">
-            <h1 class="logo"><a href="/index.html">
-            My Website</a></h1>
-            <ul>
-                <li>
-                    <a href="Home" class="active"></a>
-                </li>
-                <li>
-                    <a href="About"></a>
-                </li>
-                <li>
-                    <a href="Services"></a>
-                </li>
-                <li>
-                    <a href="Contact"></a>
-                </li>
-            </ul>
-        </div>
+      <div class="container">
+        <h1 class="logo"><a href="/index.html"> My Website</a></h1>
+        <ul>
+          <li>
+            <a href="Home" class="active">Home</a>
+          </li>
+          <li>
+            <a href="About">About</a>
+          </li>
+          <li>
+            <a href="Services">Services</a>
+          </li>
+          <li>
+            <a href="Contact">Contact</a>
+          </li>
+        </ul>
+      </div>
     </nav>
+    <div class="hero">
+      <div class="container">
+        <h1>Welcome to my website</h1>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta,
+          obcaecati.
+        </p>
+      </div>
+    </div>
     <script src="stickyNav.js"></script>
-</body>
+  </body>
 </html>
