Added hero styling

--- a/stickyNav/stickyNav.html
+++ b/stickyNav/stickyNav.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="stickyNav.css" />
   </head>
   <body>
-    <nav class="nav">
+    <!-- <nav class="nav">
       <div class="container">
         <h1 class="logo"><a href="/index.html"> My Website</a></h1>
         <ul>
@@ -32,7 +32,7 @@
           </li>
         </ul>
       </div>
-    </nav>
+    </nav> -->
     <div class="hero">
       <div class="container">
         <h1>Welcome to my website</h1>
@@ -42,6 +42,32 @@
         </p>
       </div>
     </div>
+    <section class="container content">
+      <h2>Content One</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nemo inventore
+        rem reiciendis quisquam incidunt quibusdam, nihil distinctio placeat
+        deserunt ipsum deleniti vitae voluptatem, molestiae quaerat vel est
+        voluptates. Magnam maiores culpa cumque. Facilis ab dolor enim debitis
+        distinctio, mollitia eveniet exercitationem modi neque repellendus
+        consequuntur rerum alias deserunt repellat sit culpa aut! Veritatis
+        minus, fugiat harum ea exercitationem maxime porro quod expedita
+        praesentium! Quis vitae dolor corporis distinctio, ratione qui ea,
+        obcaecati blanditiis nostrum voluptate odio rem quod aspernatur dolorum
+        natus molestiae nulla. Quia quasi rem placeat, quo harum illo mollitia,
+        repellendus temporibus, magni vitae ut? Nesciunt deserunt consequuntur
+        hic.
+      </p>
+      <h3>Content 3</h3>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis
+        alias eos doloribus iure sapiente ullam expedita vel nobis. Adipisci
+        corporis minima sapiente fugit impedit at ullam velit neque eius facere
+        dignissimos provident, architecto eos. Maiores sit atque, minus omnis ut
+        id accusantium ab ullam, illo libero excepturi magni asperiores
+        deserunt.
+      </p>
+    </section>
     <script src="stickyNav.js"></script>
   </body>
 </html>
