--- a/stickyNav/stickyNav.html
+++ b/stickyNav/stickyNav.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="stickyNav.css" />
   </head>
   <body>
-    <!-- <nav class="nav">
+    <nav class="nav">
       <div class="container">
         <h1 class="logo"><a href="/index.html"> My Website</a></h1>
         <ul>
@@ -32,7 +32,7 @@
           </li>
         </ul>
       </div>
-    </nav> -->
+    </nav>
     <div class="hero">
       <div class="container">
         <h1>Welcome to my website</h1>
