--- a/doubleVerticalSlider/dblSlider.html
+++ b/doubleVerticalSlider/dblSlider.html
@@ -3,14 +3,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Project</title>
+    <title>Verical Slider</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />    
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="dblSlider.css">
 </head>
 <body>
-    <h1>Project Starter</h1>
-    <h2>Hey</h2>
-    <h3>Hi</h3>
-    <script src="script.js"></script>
+    <div class="slider-container">
+        <div class="left-slide"></div>
+        <div class="right-slide"></div>
+        <div class="action-buttons">
+            <button class="down-button">
+                <i class="fas fa-arrow-down"></i>
+                <i class="fas fa-arrow-up"></i>
+
+            </button>
+        </div>
+
+    </div>
+
+    <script src="dblSlider.js"></script>
 </body>
 </html>
