Added more content for slides to HTML

--- a/doubleVerticalSlider/dblSlider.html
+++ b/doubleVerticalSlider/dblSlider.html
@@ -9,7 +9,25 @@
 </head>
 <body>
     <div class="slider-container">
-        <div class="left-slide"></div>
+        <div class="left-slide">
+            
+            <div style="background-color: #9A1F40">
+                <h1>Flower</h1>
+                <p>All in pink</p>
+            </div>
+            <div style="background-color: #74D4C0">
+                <h1>Blue Sky</h1>
+                <p>with mountains</p>
+            </div>
+            <div style="background-color: #DEF4F0">
+                <h1>Jellyfish</h1>
+                <p>in the ocean</p>
+            </div>
+            <div style="background-color: #D9455F">
+                <h1>Flying Eagle</h1>
+                <p>in the sunset</p>
+            </div>
+        </div>
         <div class="right-slide"></div>
         <div class="action-buttons">
             <button class="down-button">
