Added background images

--- a/doubleVerticalSlider/dblSlider.html
+++ b/doubleVerticalSlider/dblSlider.html
@@ -16,7 +16,7 @@
                 <p>All in pink</p>
             </div>
             <div style="background-color: #74D4C0">
-                <h1>Blue Sky</h1>
+                <h1>Sunset Sky</h1>
                 <p>with mountains</p>
             </div>
             <div style="background-color: #DEF4F0">
@@ -24,11 +24,16 @@
                 <p>in the ocean</p>
             </div>
             <div style="background-color: #D9455F">
-                <h1>Flying Eagle</h1>
-                <p>in the sunset</p>
+                <h1>Pink Galah</h1>
+                <p>in a sanctuary</p>
             </div>
         </div>
-        <div class="right-slide"></div>
+        <div class="right-slide">
+            <div style = "background-image: url('https://images.unsplash.com/photo-1462275646964-a0e3386b89fa?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NDV8fGZsb3dlcnxlbnwwfHwwfHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60');"></div>
+            <div style = "background-image: url('https://images.unsplash.com/photo-1582568579130-c75af2310d0b?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTJ8fHNreSUyMHdpdGglMjBtb3VudGFpbnN8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60');"></div>
+            <div style = "background-image: url('https://images.unsplash.com/photo-1532191343016-47bf741b8b3c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1267&q=80');"></div>
+            <div style = "background-image: url('https://images.unsplash.com/photo-1593924136188-f8a073c69eb9?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');"></div>
+        </div>
         <div class="action-buttons">
             <button class="down-button">
                 <i class="fas fa-arrow-down"></i>
