Added some button styling and fixed html structure for buttons

--- a/doubleVerticalSlider/dblSlider.html
+++ b/doubleVerticalSlider/dblSlider.html
@@ -13,7 +13,7 @@
             
             <div style="background-color: #9A1F40">
                 <h1>Flower</h1>
-                <p>All in pink</p>
+                <p>Cherry Blossoms</p>
             </div>
             <div style="background-color: #74D4C0">
                 <h1>Sunset Sky</h1>
@@ -37,8 +37,9 @@
         <div class="action-buttons">
             <button class="down-button">
                 <i class="fas fa-arrow-down"></i>
+            </button>
+                <button class="up-button">
                 <i class="fas fa-arrow-up"></i>
-
             </button>
         </div>
 
