--- a/toastNotification/toastNotification.html
+++ b/toastNotification/toastNotification.html
@@ -3,14 +3,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Project</title>
+    <title>Toast Notification</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />    
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="toastNotification.css">
+    <link rel="shortcut icon" type="jpg" href="Toast.jpg"/>
+
 </head>
 <body>
-    <h1>Project Starter</h1>
-    <h2>Hey</h2>
-    <h3>Hi</h3>
-    <script src="script.js"></script>
+  
+    <div id="toasts">
+        <div class="toast">Hello</div>
+        <div class="toast">Toast 2</div>
+    </div>
+
+    <button class="btn" id="button">Show Notification</button>
+
+    <script src="toastNotification.js"></script>
 </body>
 </html>
