--- a/githubProfiles/githubProfiles.html
+++ b/githubProfiles/githubProfiles.html
@@ -4,13 +4,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Project</title>
+    <link rel="shortcut icon" type="jpg" href="githubFavicon.jpg"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />    
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="githubProfiles.css">
 </head>
-<body>
+<body style= "background-image: url('https://images.unsplash.com/photo-1517707711963-adf9078bdf01?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');">
     <h1>Project Starter</h1>
     <h2>Hey</h2>
     <h3>Hi</h3>
-    <script src="script.js"></script>
+    <script src="githubProfiles.js"></script>
 </body>
 </html>
