Finished HTML with placeholders for dynamic content

--- a/githubProfiles/githubProfiles.html
+++ b/githubProfiles/githubProfiles.html
@@ -24,8 +24,16 @@
                 <p>Lorem ipsum dolor sit amet consectetur 
                     adipisicing elit. Amet, repellendus.</p>
                     <ul>
-                        <li></li>
+                        <li>300 <strong>Followers</strong></li>
+                        <li>100 <strong>Following</strong></li>
+                        <li>17 <strong>Repos</strong></li>
                     </ul>
+
+                    <div id="repos">
+                        <a href="#" class="repos">Repo 1</a>
+                        <a href="#" class="repos">Repo 2</a>
+                        <a href="#" class="repos">Repo 3</a>
+                    </div>
             </div>
 
         </div>
