--- a/githubProfiles/githubProfiles.html
+++ b/githubProfiles/githubProfiles.html
@@ -10,7 +10,7 @@
 </head>
 <body style= "background-image: url('https://images.unsplash.com/photo-1517707711963-adf9078bdf01?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80');">
     <form class="user-form" id="form">
-        <input type="text" id="search" placeholder="Search a Github User">
+        <input type="text" id="search" placeholder="Search for a Github User">
     </form>
 
     <main id="main">
