--- a/passwordGenerator/password.html
+++ b/passwordGenerator/password.html
@@ -9,8 +9,15 @@
     <link rel="stylesheet" href="password.css">
 </head>
 <body style = "background-image: url('https://images.unsplash.com/photo-1582139329536-e7284fece509?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1000&q=80');">
-    <h1>Project Starter</h1>
-
+    <section class="container">
+    <h2>Password Generator</h2>
+    <div class="result-container">
+        <span class="result"></span>
+        <button class="btn" id="clipboard">
+            <i class="far fa-clipboard"></i>
+        </button>
+    </div>
+</section>
     <script src="password.js"></script>
 </body>
 </html>
