--- a/passwordGenerator/password.html
+++ b/passwordGenerator/password.html
@@ -17,6 +17,31 @@
             <i class="far fa-clipboard"></i>
         </button>
     </div>
+    <div class="settings">
+        <div class="setting">
+            <label>Password Length</label>
+            <input type="number" id="length" min="4" max="20" value="20">
+        </div>
+        <div class="setting">
+            <label>Include Uppercase Letters</label>
+            <input type="checkbox" id="uppercase" checked>
+        </div>
+
+        <div class="setting">
+            <label>Include Lowercase Letters</label>
+            <input type="checkbox" id="lowercase" checked>
+        </div>
+
+        <div class="setting">
+            <label>Include Numbers</label>
+            <input type="checkbox" id="numbers" checked>
+        </div>
+
+        <div class="setting">
+            <label>Include Symbols</label>
+            <input type="checkbox" id="symbols" checked>
+        </div>
+    </div>
 </section>
     <script src="password.js"></script>
 </body>
