Added button, finished with html

--- a/passwordGenerator/password.html
+++ b/passwordGenerator/password.html
@@ -42,6 +42,9 @@
             <input type="checkbox" id="symbols" checked>
         </div>
     </div>
+    <button class="btn btn-large" id="generate">
+        Generate Password
+    </button>
 </section>
     <script src="password.js"></script>
 </body>
