--- a/checkboxes/checkboxes.html
+++ b/checkboxes/checkboxes.html
@@ -3,15 +3,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Project</title>
+    <title>Good, Cheap, Fast</title>
     <link rel="shortcut icon" type="image/jpg" href="Favicon_Image_Location"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />    
     <link rel="stylesheet" href="checkboxes.css">
 </head>
 <body>
-    <h1>Project Starter</h1>
-    <h2>Hey</h2>
-    <h3>Hi</h3>
+    <h1>How do you want your project to be?</h1>
+    <div class="toggle-container">
+        <input type="checkbox" id="good" class="toggle">
+        <label for="good" class="label">
+            <div class="ball"></div>
+        </label>
+        <span>Good</span>
+    </div>
+    <div class="toggle-container">
+        <input type="checkbox" id="cheap" class="toggle">
+        <label for="cheap" class="label">
+            <div class="ball"></div>
+        </label>
+        <span>Cheap</span>
+    </div>
+    <div class="toggle-container">
+        <input type="checkbox" id="fast" class="toggle">
+        <label for="fast" class="label">
+            <div class="ball"></div>
+        </label>
+        <span>Fast</span>
+    </div>
     <script src="checkboxes.js"></script>
 </body>
 </html>
