Working on adding balls to toggle rather than checkboxes

--- a/passwordGenerator/password.html
+++ b/passwordGenerator/password.html
@@ -19,27 +19,31 @@
     </div>
     <div class="settings">
         <div class="setting">
-            <label>Password Length</label>
+            <label class = "label">Password Length</label>
             <input type="number" id="length" min="4" max="25" value="25">
         </div>
         <div class="setting">
-            <label>Include Uppercase Letters</label>
-            <input type="checkbox" id="uppercase" checked>
+            <label class= "label" >Include Uppercase Letters</label>
+            <input type="checkbox" id="uppercase" class="toggle" checked>
+            <div class="ball"></div>
         </div>
 
         <div class="setting">
-            <label>Include Lowercase Letters</label>
-            <input type="checkbox" id="lowercase" checked>
+            <label class="label">Include Lowercase Letters</label>
+            <input type="checkbox" id="lowercase" class="toggle" checked>
+            <div class="ball"></div>
         </div>
 
         <div class="setting">
-            <label>Include Numbers</label>
-            <input type="checkbox" id="numbers" checked>
+            <label class="label">Include Numbers</label>
+            <input type="checkbox" id="numbers" class="toggle" checked>
+            <div class="ball"></div>
         </div>
 
         <div class="setting">
-            <label>Include Symbols</label>
-            <input type="checkbox" id="symbols" checked>
+            <label class="label">Include Symbols</label>
+            <input type="checkbox" id="symbols" class="toggle" checked>
+            <div class="ball"></div>
         </div>
     </div>
     <button class="btn btn-large" id="generate">
