Working on positioning sliders

--- a/passwordGenerator/password.html
+++ b/passwordGenerator/password.html
@@ -19,29 +19,34 @@
     </div>
     <div class="settings">
         <div class="setting">
-            <label class = "label">Password Length</label>
+            <label>Password Length</label>
             <input type="number" id="length" min="4" max="25" value="25">
         </div>
         <div class="setting">
-            <label class= "label" >Include Uppercase Letters</label>
+            <span>Include Uppercase Letters</span>
+            <label class= "label" >
+                <div class="ball"></div>
+            </label>
             <input type="checkbox" id="uppercase" class="toggle" checked>
-            <div class="ball"></div>
         </div>
 
         <div class="setting">
-            <label class="label">Include Lowercase Letters</label>
+            <span>Include Lowercase Letters</span>
+            <label class="label"></label>
             <input type="checkbox" id="lowercase" class="toggle" checked>
             <div class="ball"></div>
         </div>
 
         <div class="setting">
-            <label class="label">Include Numbers</label>
+            <span>Include Numbers</span>
+            <label class="label"></label>
             <input type="checkbox" id="numbers" class="toggle" checked>
             <div class="ball"></div>
         </div>
 
         <div class="setting">
-            <label class="label">Include Symbols</label>
+            <span>Include Symbols</span>
+            <label class="label"></label>
             <input type="checkbox" id="symbols" class="toggle" checked>
             <div class="ball"></div>
         </div>
