--- a/notesApp/notesApp.html
+++ b/notesApp/notesApp.html
@@ -9,9 +9,19 @@
     <link rel="stylesheet" href="notesApp.css">
 </head>
 <body>
-    <h1>Project Starter</h1>
-    <h2>Hey</h2>
-    <h3>Hi</h3>
+<div class="button add" id="add">
+    <i class="fas fa-plus"></i>Add Note
+</div>
+    <!-- Adding script to use Marked CDN -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/2.1.3/marked.min.js" integrity="sha512-AD+GG1nJKO4Je/Q8QsY1gM9/7o1QjpGe9W2Lrg1oGtEID/RX8bMKKZGgw/KOODkPXL6j74c6eJWAhE/3F2kKjA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="notesApp.js"></script>
+    <div class="note">
+        <div class="tools">
+            <button class="edit"><i class="fas fa-edit"></i></button>
+            <button class="delete"><i class="fas fa-trash-alt"></i></button>
+        </div>
+        <div class="hidden"></div>
+        <textarea></textarea>
+    </div>
 </body>
 </html>
