Styled text area, and note buttons

--- a/notesApp/notesApp.html
+++ b/notesApp/notesApp.html
@@ -21,7 +21,7 @@
             <button class="delete"><i class="fas fa-trash-alt"></i></button>
         </div>
         <div class="hidden"></div>
-        <textarea></textarea>
+        <textarea style="background-image: url('https://i.pinimg.com/originals/41/1f/37/411f37504d67b1f04d6b47f1f71e3cbf.jpg');"></textarea>
     </div>
 </body>
 </html>
