--- a/notesApp/notesApp.html
+++ b/notesApp/notesApp.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="notesApp.css">
 </head>
 <body>
-<div class="button add" id="add">
+<button class="button add" id="add">
     <i class="fas fa-plus"></i>Add Note
-</div>
+</button>
     <!-- Adding script to use Marked CDN -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/2.1.3/marked.min.js" integrity="sha512-AD+GG1nJKO4Je/Q8QsY1gM9/7o1QjpGe9W2Lrg1oGtEID/RX8bMKKZGgw/KOODkPXL6j74c6eJWAhE/3F2kKjA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="notesApp.js"></script>
