--- a/hoverBoard/hoverboard.html
+++ b/hoverBoard/hoverboard.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="hoverboard.css">
 </head>
 <body>
+    <h1>HOVER OVER THE SQUARES!</h1>
     <div class="container" id="container">
     </div>
     <script src="hoverboard.js"></script>
