--- a/verifyAccount/verifyAccount.html
+++ b/verifyAccount/verifyAccount.html
@@ -16,6 +16,30 @@
         <div class="code-container">
             <input type="number" class="code" placeholder="0" min= "0" max= "9" required>
         </div>
+
+        <div class="code-container">
+            <input type="number" class="code" placeholder="0" min= "0" max= "9" required>
+        </div>
+
+        <div class="code-container">
+            <input type="number" class="code" placeholder="0" min= "0" max= "9" required>
+        </div>
+
+        <div class="code-container">
+            <input type="number" class="code" placeholder="0" min= "0" max= "9" required>
+        </div>
+
+        <div class="code-container">
+            <input type="number" class="code" placeholder="0" min= "0" max= "9" required>
+        </div>
+
+        <div class="code-container">
+            <input type="number" class="code" placeholder="0" min= "0" max= "9" required>
+        </div>
+
+        <small class="info">
+            This is design only. We do not actually collect your email info. 
+        </small>
     </div>
     <script src="verifyAccount.js"></script>
 </body>
