Hardcoded user images & info for dev visuals...will replace with javascript generated content

--- a/liveUser/liveUser.html
+++ b/liveUser/liveUser.html
@@ -11,11 +11,39 @@
 <body>
     <h1>Search by Name</h1>
     <div class="container">
-        <div class="header">
+       <header>
             <h4 class="title">User Filter</h4>
             <small class="subtitile">Search by name and/or location</small>
             <input type="text" id="filter" placeholder="search">
-        </div>
+        </header>
+        <ul>
+            <li>
+                <img src="https://randomuser.me/api/portraits/women/33.jpg" alt="Sarah">
+                <div class="user-info">
+                <h4>Sarah Smith</h4>
+                <p>Philadelphia, PA</p>
+            </div>
+            </li>
+
+            <li>
+                <img src="https://randomuser.me/api/portraits/women/33.jpg" alt="Sarah">
+                <div class="user-info">
+                <h4>Sarah Smith</h4>
+                <p>Philadelphia, PA</p>
+            </div>
+            </li>
+
+            <li>
+                <img src="https://randomuser.me/api/portraits/women/33.jpg" alt="Sarah">
+                <div class="user-info">
+                <h4>Sarah Smith</h4>
+                <p>Philadelphia, PA</p>
+            </div>
+            </li>
+            <li>
+                <h3>Loading...</h3>
+            </li>
+        </ul>
     </div>
     <script src="liveUser.js"></script>
 </body>
