Created variables for label, number and range width

--- a/customRangeSlider/customSlider.html
+++ b/customRangeSlider/customSlider.html
@@ -10,10 +10,12 @@
 </head>
 <body>
 <h2>Custom Range Slider</h2>
+<section class="range-wrapper">
 <div class="range-container">
     <input type="range" id="range" min="0" max="100">
     <label for="range" class="rangeLabel">50</label>
 </div>
+</section>
     <script src="customSlider.js"></script>
 </body>
 </html>
