Styled buttons, working on nav

--- a/netflixNav/netflixNav.html
+++ b/netflixNav/netflixNav.html
@@ -12,16 +12,16 @@
     <button class="nav-btn open-btn">
          <i class="fas fa-bars"></i>
     </button>
-        <img src="https://www.clipartmax.com/png/small/333-3336713_feel-good-moisturizer-leaping-bunny.png" alt="Logo" class="logo">
+        <img src="/LB.png" alt="Logo" class="logo">
         <p class="text">Mobile Navigation</p>
 
-        <div class="nav nav-purple">
-            <div class="nav nav-red">
-                <div class="nav nav-orange">
+        <div class="nav visible nav-purple">
+            <div class="nav visible nav-red">
+                <div class="nav visible nav-orange">
                     <button class="nav-btn close-btn">
                       <i class="fas fa-times"></i>
                     </button>
-                    <img src="https://www.clipartmax.com/png/small/226-2261238_primary-menu-bunny-logo-transparent.png" 
+                    <img src="/no.jpeg" 
                     alt="Logo" class="logo">
                     
 
