Working on mobile nav menu styling

--- a/netflixNav/netflixNav.html
+++ b/netflixNav/netflixNav.html
@@ -21,7 +21,7 @@
                     <button class="nav-btn close-btn">
                       <i class="fas fa-times"></i>
                     </button>
-                    <img src="/no.jpeg" 
+                    <img src="/LB.png" 
                     alt="Logo" class="logo">
                     
 
