Added event listener to close button and transiton styling, project complete

--- a/netflixNav/netflixNav.html
+++ b/netflixNav/netflixNav.html
@@ -15,9 +15,9 @@
         <img src="/LB.png" alt="Logo" class="logo">
         <p class="text">Mobile Navigation</p>
 
-        <div class="nav visible nav-purple">
-            <div class="nav visible nav-red">
-                <div class="nav visible nav-orange">
+        <div class="nav nav-purple">
+            <div class="nav nav-red">
+                <div class="nav nav-orange">
                     <button class="nav-btn close-btn">
                       <i class="fas fa-times"></i>
                     </button>
