Answers dynamically rendering for multiple choice

--- a/quizApp/quizApp.html
+++ b/quizApp/quizApp.html
@@ -28,7 +28,7 @@
 
                 <li>
                     <input type="radio" name="answer" id="c" class="answer">
-                    <label for="c" id="b_text">Question</
+                    <label for="c" id="c_text">Question</
                         label>
                 </li>
 
