Adding html structure

--- a/testimonialBox/testimonialBox.html
+++ b/testimonialBox/testimonialBox.html
@@ -9,6 +9,19 @@
     <link rel="stylesheet" href="testimonialBox.css">
 </head>
 <body>
+    <div class="testimonial-container">
+        <div class="progress-bar"></div>
+        <div class="fas fa-quote-right fa-quote"></div>
+        <div class="fas fa-quote-left fa-quote"></div>
+        <p class="testimonial">
+            She is amazing to work with. So compotont and thorough.
+            She helped me to understand all of the components that I will need in order 
+            to utilize my custom site on my own. Amazing, will hire again!
+        </p>
+        <div class="user">
+            
+        </div>
+    </div>
     <script src="testimonialBox.js"></script>
 </body>
 </html>
