Added more styling including progress bar

--- a/testimonialBox/testimonialBox.html
+++ b/testimonialBox/testimonialBox.html
@@ -14,7 +14,8 @@
         <div class="fas fa-quote-right fa-quote"></div>
         <div class="fas fa-quote-left fa-quote"></div>
         <p class="testimonial">
-            She is amazing to work with. So compotont and thorough.
+            She is amazing to work with. So compotont and thorough. Really took her time making sure that 
+            she went through my role in updating my site down to the very last detail. 
             She helped me to understand all of the components that I will need in order 
             to utilize my custom site on my own. Amazing, will hire again!
         </p>
