Completed html layout and started defining javascript variables

--- a/randomImage/randomImage.html
+++ b/randomImage/randomImage.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="randomImage.css">
 </head>
 <body>
-
+    <h1>Random Image Feed</h1>
+    <div class="container"></div>
     <script src="randomImage.js"></script>
 </body>
 </html>
